Better fix spacing register on mobile

--- a/src/components/Auth/Register/Register.css
+++ b/src/components/Auth/Register/Register.css
@@ -21,7 +21,7 @@ button
     padding: 3rem;
     margin: 0 auto;
     margin-bottom: 3rem;
-    margin-top: 10rem;
+    margin-top: 7.5rem;
 }
 
 .register__article__title{
@@ -97,6 +97,7 @@ button
 @media (min-width: 750px) {
     .register{
         width: 50%;
+        margin-top: 10rem;
     }
     .register__form__article{
         display: block;
